# spectre

./: .gitignore  Cargo.toml  README.md  build.rs  leftoff.txt
spectre-core/: Cargo.toml
spectre-core/src/: ds_launch.rs  dta_unpacker.rs  gamedata.rs  inventory.rs  items.rs  lib.rs  mpmaplist.rs  server.rs
spectre-ui/: Cargo.toml  build.rs
spectre-ui/src/: config.rs  dialog.rs  ds_helper.rs  main.rs  server_prereqs.rs  server_utility_http.rs  splash.rs
spectre-ui/src/modules/: dta_unpacker.rs  gamedata_editor.rs  items_editor.rs  mod.rs  server_launcher.rs
spectre-web/: Cargo.toml
spectre-web/content/server_utility/: index.html
spectre-web/content/server_utility/css/: style.css
spectre-web/content/server_utility/js/: app.js
spectre-web/src/: app.rs  lib.rs
src/: config.rs  main.rs  splash.rs
src/modules/: dta_unpacker.rs  inventory_editor.rs  items_editor.rs  mod.rs  mpmaplist_editor.rs  server_launcher.rs
