[build]
build = "build.rs"

[build-dependencies]
image = "0.24"
toml = "0.8"
winres = "0.1"

[dependencies]
eframe = "0.27"
egui = "0.27"
image = "0.24"
serde_json = "1.0"

[dependencies.serde]
features = ["derive"]
version = "1.0"

[package]
authors = ["Your Name <you@example.com>"]
edition = "2021"
name = "spectre"
version = "0.0.130"
