[[bin]]
name = "spectre"
path = "src/main.rs"

[build-dependencies]
image = "0.24"
toml = "0.8"
winres = "0.1"

[dependencies]
egui = "0.33"
image = "0.24"
resvg = "0.42"
rfd = "0.14"
serde_json = "1.0"
tiny-skia = "0.11"

[dependencies.eframe]
features = [
    "glow",
    "wgpu",
]
version = "0.33"

[dependencies.egui_software_backend]
features = ["winit"]
version = "0.0.2"

[dependencies.serde]
features = ["derive"]
version = "1.0"

[dependencies.spectre-core]
path = "../spectre-core"

[dependencies.spectre-web]
path = "../spectre-web"

[package]
authors = ["Xevrac"]
build = "build.rs"
edition = "2021"
name = "spectre-ui"
version = "0.0.862"

[target."cfg(windows)".dependencies]
chrono = "0.4"
http = "0.2"
raw-window-handle = "0.6"
runas = "1.2"
tray-icon = "0.19"
winreg = "0.52"
wry = "0.38"

[target."cfg(windows)".dependencies.windows]
features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_Console",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Memory",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
]
version = "0.58"
